logs/izverifier.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IzVerifier'...
Listing './lib/python3.5/site-packages/IzVerifier/exceptions'...
Listing './lib/python3.5/site-packages/IzVerifier/izspecs'...
Listing './lib/python3.5/site-packages/IzVerifier/izspecs/containers'...
Compiling './lib/python3.5/site-packages/IzVerifier/izspecs/containers/izclasses.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/izspecs/containers/izclasses.py", line 73
    print key
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/IzVerifier/izspecs/verifiers'...
Listing './lib/python3.5/site-packages/IzVerifier/logging'...
Compiling './lib/python3.5/site-packages/IzVerifier/logging/reporter.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/logging/reporter.py", line 28
    print template.format(test, len(items), 0, test_width - len(test), len(test))
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/IzVerifier/logging/termhelper.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/logging/termhelper.py", line 19
    print "The terminal has", term_height, "rows and", term_width, "columns"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/IzVerifier/test'...
Compiling './lib/python3.5/site-packages/IzVerifier/test/test_dependencies.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/test/test_dependencies.py", line 48
    print "%s should not have been found" % cond
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/IzVerifier/test/test_izverifier.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/test/test_izverifier.py", line 65
    print num
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/IzVerifier/test/test_seeker.py'...
***   File "./lib/python3.5/site-packages/IzVerifier/test/test_seeker.py", line 177
    print str(hit[2]) + " => " + str(key)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/IzVerifier-0.0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
